# multiplatform-idle-clicker-boilerplate

./: .env.example  .gitignore  BOILERPLATE.md  LICENSE  README.md  capacitor.config.json  eslint.config.js  index.html  jsconfig.json  package-lock.json  package.json  vite.config.js  vitest.config.js
.github/workflows/: ci.yml  deploy-pages.yml
src/: main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src/config/: buyAmounts.js  desktopLayout.test.js  gameConfig.js  platform.js  platform.test.js  theme.js  uiText.js
src/controllers/: ListScrollController.js
src/data/: achievements.js  achievements.test.js  baseMultiplierTiers.json  baseMultipliers.js  generatorFactory.js  generatorFactory.test.js  generators.js  metaUpgrades.js  upgrades.js
src/lib/: autoTapProgress.js  autoTapProgress.test.js  clickerController.js  clickerController.test.js  clickerMath.js  clickerMath.test.js  prestige.js  prestige.test.js  saveState.js
src/scenes/: ClickerScene.js
src/scenes/clicker/: createPages.js  listRender.js  overlays.js  pageNavigation.js  viewportCameras.js  wallClock.js
src/services/: feedbackService.js  saveMigrations.js  saveMigrations.test.js  saveStorage.js  saveStorage.test.js  settingsStorage.js  storageAdapter.js
src/ui/: achievementLines.js  achievementLines.test.js  ascensionTokenBadge.js  autoTapCursors.js  bottomNavigation.js  buyAmountBar.js  metaUpgradeCopy.js  metaUpgradeCopy.test.js  metaUpgradesView.js  prestigeView.js  settingsView.js  statusView.js  storeItemTooltip.js  storeItemTooltip.test.js  upgradeListView.js
