[package]
name = "idle-clicker"
version = "1.0.0"
description = "Generic multiplatform idle clicker boilerplate (Phaser + Tauri + Capacitor)"
authors = []
license = "ISC"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.3", features = [] }
